--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nitol.aust.cse.austclassmanager">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -40,6 +40,8 @@
         <activity
             android:name=".ResultCheckActivity"
             android:label="Results and Information" />
+        <activity android:name=".SetQuiz"
+            android:label="Set Quiz"></activity>
     </application>
 
 </manifest>
