--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.nitol.aust.cse.austclassmanager">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALERM"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- fcm -->
+        <service android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".MyFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".ClassRoutineActivity"
             android:label="Class Routine" />
@@ -43,7 +58,11 @@
         <activity
             android:name=".SetQuiz"
             android:label="Set Quiz" />
-        <activity android:name=".ClassDetails"></activity>
+        <activity android:name=".ClassDetails" />
+        <activity android:name=".BackupMark"></activity>
+
+        <receiver android:name=".NotificationReceiver"/>
+
     </application>
 
 </manifest>
